# ros2_sfbot_control

./: CMakeLists.txt  README.md  package.xml  sfbot_can.xml
bringup/config/: controller_config.yaml  my_robot_controllers.yaml  rrbot_controllers.yaml  rrbot_controllers_old.yaml  test_controllers.yaml
bringup/launch/: cartesian_controller.launch.py  my_robot.launch.py  rrbot.launch.py  test.launch.py  test_joint_trajectory_controller.launch.py
description/launch/: view_robot.launch.py
description/ros2_control/: ros2_control.xacro  ros2_control_my_robot.xacro  ros2_control_test.xacro  rrbot.ros2_control.xacro
description/urdf/: my_robot.description.urdf.xacro  my_robot.urdf.xacro  sfbot.description.urdf.xacro  sfbot.urdf.xacro  test.description.urdf.xacro  test.descriptionurdf.xacro  test.urdf.xacro
doc/: userdoc.rst
hardware/: rrbot.cpp  sfbot.cpp  sfbot.my_robot.cpp  sfbot_2.cpp
hardware/include/ros2_control_demo_example_1/: motor_data.hpp  rrbot.hpp  sfbot.hpp
hardware/include/sfbot_can/: can_csv_logger.hpp  motor_can_driver.hpp  motor_can_driver_multiple.hpp  motor_data.hpp  rrbot.hpp  sfbot.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/sfbot_can/include/sfbot_can/sfbot_can/: cubemars_motors.hpp  motor_can_driver.hpp  motor_can_driver_multiple.hpp  motor_data.hpp  sfbot.hpp
install/sfbot_can/lib/sfbot_can/: advanced_cartesian_controller.py
install/sfbot_can/share/ament_index/resource_index/parent_prefix_path/: sfbot_can
install/sfbot_can/share/sfbot_can/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/sfbot_can/share/sfbot_can/cmake/: ament_cmake_export_targets-extras.cmake
install/sfbot_can/share/sfbot_can/config/: my_robot_controllers.yaml  rrbot_controllers.yaml
install/sfbot_can/share/sfbot_can/description/launch/: view_robot.launch.py
install/sfbot_can/share/sfbot_can/description/urdf/: my_robot.description.urdf.xacro  sfbot.description.urdf.xacro  sfbot.description.urdf_collision.xacro  sfbot.urdf.xacro  test.urdf.xacro
install/sfbot_can/share/sfbot_can/launch/: my_robot.launch.py  rrbot.launch_old.py  test.launch.py  test_forward_position_controller.launch.py
log/: latest_build
rviz/: my_robot.rviz
scripts/: advanced_cartesian_controller.py  direct_command_test.py  hi.py  ik_verification_test.py  joint_trajectory_client.py  rectangle_visualization.py  simple_action_test.py  tf_based_visualizer.py
test/: test_rrbot_launch.py  test_rrbot_launch_cli_direct.py  test_urdf_xacro.py  test_view_robot_launch.py
